Anonymous | Login | 2021-01-17 18:18 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0029303 | Community | [OCCT] OCCT:Data Exchange | public | 2017-11-09 04:49 | 2020-11-23 12:33 | ||||||||
Reporter | eryar | ||||||||||||
Assigned To | gka | ||||||||||||
Priority | normal | Severity | feature | ||||||||||
Status | new | Resolution | open | ||||||||||
Platform | Windows | OS | VC++ 2015 | OS Version | 64 bit | ||||||||
Product Version | |||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0029303: Data Exchange - add RWObj_Writer tool for wavefront OBJ file | ||||||||||||
Description | I found the draw test harness command 'wavefront' that can export obj file for TopoDS_Shape. It is possible to move the function 'wavefront' in MeshTest.cxx to a class 'ObjAPI_Writer' like 'StlAPI_Writer' for STL to export OBJ file. Like STL read/write, add a class 'ObjAPI_Reader' to read OBJ file to TopoDS_Shape. Just a advice. | ||||||||||||
Steps To Reproduce | pload ALL box b 1 2 3 # export b to d:/box.obj wavefront b d:/box | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | |||||||||||||
Attached Files | |||||||||||||
![]() |
|
(0097008) kgv (developer) 2020-11-23 12:33 |
OBJ reader has been introduced by #0029296, so that OBJ writer to be added. |
![]() |
|||
Date Modified | Username | Field | Change |
2017-11-09 04:49 | eryar | New Issue | |
2017-11-09 04:49 | eryar | Assigned To | => gka |
2019-03-03 00:50 | kgv | Relationship added | related to 0029296 |
2019-03-03 00:52 | kgv | Summary | Write/Read Wavefront OBJ file => Data Exchange - Write/Read Wavefront OBJ file |
2020-11-23 12:31 | kgv | Severity | integration request => feature |
2020-11-23 12:31 | kgv | Product Version | 7.1.0 => |
2020-11-23 12:31 | kgv | Target Version | => 7.6.0* |
2020-11-23 12:31 | kgv | Summary | Data Exchange - Write/Read Wavefront OBJ file => Data Exchange - add RWObj_Writer tool for wavefront OBJ file |
2020-11-23 12:32 | kgv | Steps to Reproduce Updated | View Revisions |
2020-11-23 12:33 | kgv | Note Added: 0097008 |
Copyright © 2000 - 2021 MantisBT Team |