0029303: Data Exchange - add RWObj_CafWriter tool for wavefront OBJ file

Unstable test case v3d/memory/bug26538 has been adjusted.